add_executable(test_spmv_laplacian test_spmv_laplacian.cpp)
target_link_libraries(test_spmv_laplacian raptor ${MPI_LIBRARIES} googletest pthread )
add_test(LaplacianSpMVTest ./test_spmv_laplacian)

add_executable(test_spmv_aniso test_spmv_aniso.cpp)
target_link_libraries(test_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
add_test(AnisoSpMVTest ./test_spmv_aniso)

add_executable(test_spmv_random test_spmv_random.cpp)
target_link_libraries(test_spmv_random raptor ${MPI_LIBRARIES} googletest pthread )
add_test(RandomSpMVTest ./test_spmv_random)

add_executable(test_bsr_spmv_aniso test_bsr_spmv_aniso.cpp)
target_link_libraries(test_bsr_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
add_test(AnisoBSRSpMVTest ./test_bsr_spmv_aniso)

add_executable(test_bsr_spmv_laplacian test_bsr_spmv_laplacian.cpp)
target_link_libraries(test_bsr_spmv_laplacian raptor ${MPI_LIBRARIES} googletest pthread )
add_test(LaplacianBSRSpMVTest ./test_bsr_spmv_laplacian)

add_executable(test_bsr_spmv_random test_bsr_spmv_random.cpp)
target_link_libraries(test_bsr_spmv_random raptor ${MPI_LIBRARIES} googletest pthread )
add_test(RandomBSRSpMVTest ./test_bsr_spmv_random)

add_executable(test_bvector_spmv_aniso test_bvector_spmv_aniso.cpp)
target_link_libraries(test_bvector_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
add_test(AnisoBVectorSpMVTest ./test_bvector_spmv_aniso)

add_executable(test_bvector_mult test_bvector_mult.cpp)
target_link_libraries(test_bvector_mult raptor ${MPI_LIBRARIES} googletest pthread )
add_test(BVectorMultTest ./test_bvector_mult)

if (WITH_MPI)
    add_executable(test_par_add test_par_add.cpp)
    target_link_libraries(test_par_add raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParAddTest ${MPIRUN} -n 1 ${HOST} ./test_par_add)
    add_test(ParAddTest ${MPIRUN} -n 16 ${HOST} ./test_par_add)

    add_executable(test_par_spmv_laplacian test_par_spmv_laplacian.cpp)
    target_link_libraries(test_par_spmv_laplacian raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParLaplacianSpMVTest ${MPIRUN} -n 1 ${HOST} ./test_par_spmv_laplacian)
    add_test(ParLaplacianSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_par_spmv_laplacian)
    add_test(ParLaplacianSpMVTest ${MPIRUN} -n 4 ${HOST} ./test_par_spmv_laplacian)
    add_test(ParLaplacianSpMVTest ${MPIRUN} -n 8 ${HOST} ./test_par_spmv_laplacian)
    add_test(ParLaplacianSpMVTest ${MPIRUN} -n 16 ${HOST} ./test_par_spmv_laplacian)

    add_executable(test_par_spmv_aniso test_par_spmv_aniso.cpp)
    target_link_libraries(test_par_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParAnisoSpMVTest ${MPIRUN} -n 1 ${HOST} ./test_par_spmv_aniso)
    add_test(ParAnisoSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_par_spmv_aniso)
    add_test(ParAnisoSpMVTest ${MPIRUN} -n 4 ${HOST} ./test_par_spmv_aniso)
    add_test(ParAnisoSpMVTest ${MPIRUN} -n 8 ${HOST} ./test_par_spmv_aniso)
    add_test(ParAnisoSpMVTest ${MPIRUN} -n 16 ${HOST} ./test_par_spmv_aniso)

    add_executable(test_par_spmv_random test_par_spmv_random.cpp)
    target_link_libraries(test_par_spmv_random ${MPI_LIBRARIES} raptor googletest pthread )
    add_test(ParRandomSpMVTest ${MPIRUN} -n 1 ${HOST} ./test_par_spmv_random)
    add_test(ParRandomSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_par_spmv_random)
    add_test(ParRandomSpMVTest ${MPIRUN} -n 4 ${HOST} ./test_par_spmv_random)
    add_test(ParRandomSpMVTest ${MPIRUN} -n 8 ${HOST} ./test_par_spmv_random)
    add_test(ParRandomSpMVTest ${MPIRUN} -n 16 ${HOST} ./test_par_spmv_random)
    
    add_executable(test_tap_spmv_laplacian test_tap_spmv_laplacian.cpp)
    target_link_libraries(test_tap_spmv_laplacian raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(TAPLaplacianSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_tap_spmv_laplacian)
    add_test(TAPLaplacianSpMVTest ${MPIRUN} -n 4 ${HOST} ./test_tap_spmv_laplacian)
    add_test(TAPLaplacianSpMVTest ${MPIRUN} -n 8 ${HOST} ./test_tap_spmv_laplacian)
    add_test(TAPLaplacianSpMVTest ${MPIRUN} -n 16 ${HOST} ./test_tap_spmv_laplacian)

    add_executable(test_tap_spmv_aniso test_tap_spmv_aniso.cpp)
    target_link_libraries(test_tap_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(TAPAnisoSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_tap_spmv_aniso)
    add_test(TAPAnisoSpMVTest ${MPIRUN} -n 4 ${HOST} ./test_tap_spmv_aniso)
    add_test(TAPAnisoSpMVTest ${MPIRUN} -n 8 ${HOST} ./test_tap_spmv_aniso)
    add_test(TAPAnisoSpMVTest ${MPIRUN} -n 16 ${HOST} ./test_tap_spmv_aniso)

    add_executable(test_tap_spmv_random test_tap_spmv_random.cpp)
    target_link_libraries(test_tap_spmv_random ${MPI_LIBRARIES} raptor googletest pthread )
    add_test(TAPRandomSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_tap_spmv_random)
    add_test(TAPRandomSpMVTest ${MPIRUN} -n 4 ${HOST} ./test_tap_spmv_random)
    add_test(TAPRandomSpMVTest ${MPIRUN} -n 8 ${HOST} ./test_tap_spmv_random)

    add_executable(test_par_bsr_spmv test_par_bsr_spmv.cpp)
    target_link_libraries(test_par_bsr_spmv raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBSRSpMVTest ${MPIRUN} -n 1 ${HOST} ./test_par_bsr_spmv)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_par_bsr_spmv)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 3 ${HOST} ./test_par_bsr_spmv)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 6 ${HOST} ./test_par_bsr_spmv)

    add_executable(test_par_scale_aniso test_par_scale_aniso.cpp)
    target_link_libraries(test_par_scale_aniso raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBSRSpMVTest ${MPIRUN} -n 1 ${HOST} ./test_par_scale_aniso)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 2 ${HOST} ./test_par_scale_aniso)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 3 ${HOST} ./test_par_scale_aniso)
    add_test(ParBSRSpMVTest ${MPIRUN} -n 6 ${HOST} ./test_par_scale_aniso)

    add_executable(test_par_bvector_mult test_par_bvector_mult.cpp)
    target_link_libraries(test_par_bvector_mult raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBVectorMultTest ${MPIRUN} -n 1 ./test_par_bvector_mult)
    add_test(ParBVectorMultTest ${MPIRUN} -n 2 ./test_par_bvector_mult)
    add_test(ParBVectorMultTest ${MPIRUN} -n 4 ./test_par_bvector_mult)
    add_test(ParBVectorMultTest ${MPIRUN} -n 8 ./test_par_bvector_mult)
    
    add_executable(test_par_bvector_ops test_par_bvector_ops.cpp)
    target_link_libraries(test_par_bvector_ops raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBVectorOpsTest ${MPIRUN} -n 1 ./test_par_bvector_ops)
    add_test(ParBVectorOpsTest ${MPIRUN} -n 2 ./test_par_bvector_ops)
    add_test(ParBVectorOpsTest ${MPIRUN} -n 4 ./test_par_bvector_ops)
    add_test(ParBVectorOpsTest ${MPIRUN} -n 8 ./test_par_bvector_ops)
    
    add_executable(test_par_bvector_spmv_aniso test_par_bvector_spmv_aniso.cpp)
    target_link_libraries(test_par_bvector_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBVectorAnisoSpMVTest ${MPIRUN} -n 1 ./test_par_bvector_spmv_aniso)
    add_test(ParBVectorAnisoSpMVTest ${MPIRUN} -n 2 ./test_par_bvector_spmv_aniso)
    add_test(ParBVectorAnisoSpMVTest ${MPIRUN} -n 4 ./test_par_bvector_spmv_aniso)
    add_test(ParBVectorAnisoSpMVTest ${MPIRUN} -n 8 ./test_par_bvector_spmv_aniso)
    
    add_executable(test_bv_tap_spmv_aniso test_bv_tap_spmv_aniso.cpp)
    target_link_libraries(test_bv_tap_spmv_aniso raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBVectorAnisoTAPSpMVTest ${MPIRUN} -n 1 ./test_bv_tap_spmv_aniso)
    add_test(ParBVectorAnisoTAPSpMVTest ${MPIRUN} -n 2 ./test_bv_tap_spmv_aniso)
    add_test(ParBVectorAnisoTAPSpMVTest ${MPIRUN} -n 4 ./test_bv_tap_spmv_aniso)
    add_test(ParBVectorAnisoTAPSpMVTest ${MPIRUN} -n 8 ./test_bv_tap_spmv_aniso)
    
    add_executable(test_bv_tap_spmv_rectangular test_bv_tap_spmv_rectangular.cpp)
    target_link_libraries(test_bv_tap_spmv_rectangular raptor ${MPI_LIBRARIES} googletest pthread )
    #add_test(ParBVectorRectangularTAPSpMVTest ${MPIRUN} -n 4 ./test_bv_tap_spmv_rectangular)
    #add_test(ParBVectorRectangularTAPSpMVTest ${MPIRUN} -n 8 ./test_bv_tap_spmv_rectangular)
    
    add_executable(test_tap_25step_comm test_tap_25step_comm.cpp)
    target_link_libraries(test_tap_25step_comm raptor ${MPI_LIBRARIES} googletest pthread )
    
    add_executable(test_bv_tap_spmv_rectangular_tiny test_bv_tap_spmv_rectangular_tiny.cpp)
    target_link_libraries(test_bv_tap_spmv_rectangular_tiny raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBVectorRectangularTAPSpMVTinyTest ${MPIRUN} -n 8 ./test_bv_tap_spmv_rectangular_tiny)
    
    add_executable(test_bv_tap_spmv_rectangular_medium test_bv_tap_spmv_rectangular_medium.cpp)
    target_link_libraries(test_bv_tap_spmv_rectangular_medium raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBVectorRectangularTAPSpMVMedTest ${MPIRUN} -n 12 ./test_bv_tap_spmv_rectangular_medium)
    
    add_executable(par_bvspmv_profiling par_bvspmv_profiling.cpp)
    target_link_libraries(par_bvspmv_profiling raptor ${MPI_LIBRARIES} googletest pthread )
    
    add_executable(allreduce_profiling allreduce_profiling.cpp)
    target_link_libraries(allreduce_profiling raptor ${MPI_LIBRARIES} googletest pthread )
    
    add_executable(par_spmv_profiling par_spmv_profiling.cpp)
    target_link_libraries(par_spmv_profiling raptor ${MPI_LIBRARIES} googletest pthread )
    
    add_executable(par_bvinner_profiling par_bvinner_profiling.cpp)
    target_link_libraries(par_bvinner_profiling raptor ${MPI_LIBRARIES} googletest pthread )
    
    add_executable(par_bvspmv_messages_profiling par_bvspmv_messages_profiling.cpp)
    target_link_libraries(par_bvspmv_messages_profiling raptor ${MPI_LIBRARIES} googletest pthread )
    
endif()
