add_executable(test_bv_relaxation test_bv_relaxation.cpp)
target_link_libraries(test_bv_relaxation raptor ${MPI_LIBRARIES} googletest pthread )
add_test(BlockVectorRelaxationTest ./test_bv_relaxation)

if (WITH_MPI)
    add_executable(test_par_bv_relaxation test_par_bv_relaxation.cpp)
    target_link_libraries(test_par_bv_relaxation raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBlockVectorRelaxationTest ${MPIRUN} -n 1 ${HOST} ./test_par_bv_relaxation)
    add_test(ParBlockVectorRelaxationTest ${MPIRUN} -n 2 ${HOST} ./test_par_bv_relaxation)
    add_test(ParBlockVectorRelaxationTest ${MPIRUN} -n 4 ${HOST} ./test_par_bv_relaxation)
    add_test(ParBlockVectorRelaxationTest ${MPIRUN} -n 8 ${HOST} ./test_par_bv_relaxation)
    
    add_executable(test_par_tap_bv_relaxation test_par_tap_bv_relaxation.cpp)
    target_link_libraries(test_par_tap_bv_relaxation raptor ${MPI_LIBRARIES} googletest pthread )
    add_test(ParTAPBlockVectorRelaxationTest ${MPIRUN} -n 1 ${HOST} ./test_par_tap_bv_relaxation)
    add_test(ParTAPBlockVectorRelaxationTest ${MPIRUN} -n 2 ${HOST} ./test_par_tap_bv_relaxation)
    add_test(ParTAPBlockVectorRelaxationTest ${MPIRUN} -n 4 ${HOST} ./test_par_tap_bv_relaxation)
    add_test(ParTAPBlockVectorRelaxationTest ${MPIRUN} -n 8 ${HOST} ./test_par_tap_bv_relaxation)
endif()
